--- a/task_list/pubspec.yaml
+++ b/task_list/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^2.0.0
+  shared_preferences: ^2.0.15
   intl:
 
 dev_dependencies:
